[gd_scene load_steps=10 format=2]

[ext_resource path="res://enemy anim/0001.png" type="Texture" id=1]
[ext_resource path="res://enemy anim/0002.png" type="Texture" id=2]
[ext_resource path="res://enemy anim/untitled.png" type="Texture" id=3]
[ext_resource path="res://enemy.gd" type="Script" id=4]
[ext_resource path="res://David assets/soundsandmusic(1)/sounds/pepSound2.ogg" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "squashed",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "crawl",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.7642, 11.8394 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.76292
height = 36.9703

[sub_resource type="CircleShape2D" id=4]
radius = 11.3721

[node name="enemy" type="KinematicBody2D"]
position = Vector2( -17.288, -12.2648 )
collision_layer = 16
collision_mask = 33
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.61039, -14.8201 )
scale = Vector2( 0.091, 0.136 )
frames = SubResource( 1 )
animation = "crawl"
playing = true
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.281, -0.0170972 )
scale = Vector2( 1.191, 1.171 )
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="floor_detector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
__meta__ = {
"_edit_group_": true
}

[node name="side_checker" type="Area2D" parent="."]
position = Vector2( 2.11893, -1.05946 )
collision_layer = 0
collision_mask = 33
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="side_checker"]
position = Vector2( 2.05609, -20.3007 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="top_checker" type="Area2D" parent="."]
position = Vector2( 0.794601, 1.05946 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 2.59564, -43.4182 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SoundSquashed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 7.845
pitch_scale = 1.2

[connection signal="body_entered" from="side_checker" to="." method="_on_side_checker_body_entered"]
[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
